# openapi-generator-spring/src/main/java/com/huongdanjava/openapi/web/StudentsApi.java
@@ -1,5 +1,5 @@
 /*
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.15.0).
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.23.0).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
@@ -10,7 +10,7 @@ import com.huongdanjava.openapi.dto.DeleteStudentResponse;
 import com.huongdanjava.openapi.dto.GetAllStudentsResponse;
 import com.huongdanjava.openapi.dto.GetStudentByIdResponse;
 import com.huongdanjava.openapi.dto.InlineObject;
-import com.huongdanjava.openapi.dto.InlineObject1;
+import org.springframework.lang.Nullable;
 import com.huongdanjava.openapi.dto.Student;
 import com.huongdanjava.openapi.dto.UpdateStudentResponse;
 import io.swagger.v3.oas.annotations.ExternalDocumentation;
@@ -25,15 +25,10 @@ import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import io.swagger.v3.oas.annotations.enums.ParameterIn;
 import io.swagger.v3.oas.annotations.media.ExampleObject;
-import org.springframework.lang.Nullable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.server.ServerWebExchange;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
-import org.springframework.http.codec.multipart.Part;
 
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.*;
@@ -41,7 +36,7 @@ import java.util.List;
 import java.util.Map;
 import jakarta.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-09-28T20:23:53.641444+08:00[Asia/Singapore]", comments = "Generator version: 7.15.0")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-07-04T11:28:38.966332+07:00[Asia/Ho_Chi_Minh]", comments = "Generator version: 7.23.0")
 @Validated
 @Tag(name = "students", description = "the students API")
 public interface StudentsApi {
@@ -50,7 +45,7 @@ public interface StudentsApi {
         return new StudentsApiDelegate() {};
     }
 
-    public static final String PATH_ADD_NEW_STUDENT = "/students";
+    String PATH_ADD_NEW_STUDENT = "/students";
     /**
      * POST /students : Add a new student
      *
@@ -70,7 +65,7 @@ public interface StudentsApi {
                 @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject.class))
             }),
             @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject1.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject.class))
             })
         }
     )
@@ -80,16 +75,14 @@ public interface StudentsApi {
         produces = { "application/json" },
         consumes = { "application/json" }
     )
-    
-    default Mono<ResponseEntity<AddNewStudentResponse>> addNewStudent(
-        @Parameter(name = "Student", description = "") @Valid @RequestBody(required = false) Mono<Student> student,
-        @Parameter(hidden = true) final ServerWebExchange exchange
+    default ResponseEntity<AddNewStudentResponse> addNewStudent(
+        @Parameter(name = "Student", description = "") @Valid @RequestBody(required = false) @Nullable Student student
     ) {
-        return getDelegate().addNewStudent(student, exchange);
+        return getDelegate().addNewStudent(student);
     }
 
 
-    public static final String PATH_DELETE_STUDENT_BY_ID = "/students/{id}";
+    String PATH_DELETE_STUDENT_BY_ID = "/students/{id}";
     /**
      * DELETE /students/{id} : Delete a student by Id
      *
@@ -109,7 +102,7 @@ public interface StudentsApi {
                 @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject.class))
             }),
             @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject1.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject.class))
             })
         }
     )
@@ -118,16 +111,14 @@ public interface StudentsApi {
         value = StudentsApi.PATH_DELETE_STUDENT_BY_ID,
         produces = { "application/json" }
     )
-    
-    default Mono<ResponseEntity<DeleteStudentResponse>> deleteStudentById(
-        @Parameter(name = "id", description = "Student Id", required = true, in = ParameterIn.PATH) @PathVariable("id") String id,
-        @Parameter(hidden = true) final ServerWebExchange exchange
+    default ResponseEntity<DeleteStudentResponse> deleteStudentById(
+        @Parameter(name = "id", description = "Student Id", required = true, in = ParameterIn.PATH) @PathVariable("id") String id
     ) {
-        return getDelegate().deleteStudentById(id, exchange);
+        return getDelegate().deleteStudentById(id);
     }
 
 
-    public static final String PATH_GET_ALL_STUDENTS = "/students";
+    String PATH_GET_ALL_STUDENTS = "/students";
     /**
      * GET /students : Get all students
      *
@@ -148,7 +139,7 @@ public interface StudentsApi {
                 @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject.class))
             }),
             @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject1.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject.class))
             })
         }
     )
@@ -157,17 +148,15 @@ public interface StudentsApi {
         value = StudentsApi.PATH_GET_ALL_STUDENTS,
         produces = { "application/json" }
     )
-    
-    default Mono<ResponseEntity<GetAllStudentsResponse>> getAllStudents(
-        @Min(1) @Parameter(name = "page", description = "Page number (1-based).", in = ParameterIn.QUERY) @Valid @RequestParam(value = "page", required = false, defaultValue = "1") Integer page,
-        @Min(1) @Max(100) @Parameter(name = "size", description = "Number of items per page.", in = ParameterIn.QUERY) @Valid @RequestParam(value = "size", required = false, defaultValue = "10") Integer size,
-        @Parameter(hidden = true) final ServerWebExchange exchange
+    default ResponseEntity<GetAllStudentsResponse> getAllStudents(
+        @Min(value = 1) @Parameter(name = "page", description = "Page number (1-based).", in = ParameterIn.QUERY) @Valid @RequestParam(value = "page", required = false, defaultValue = "1") Integer page,
+        @Min(value = 1) @Max(value = 100) @Parameter(name = "size", description = "Number of items per page.", in = ParameterIn.QUERY) @Valid @RequestParam(value = "size", required = false, defaultValue = "10") Integer size
     ) {
-        return getDelegate().getAllStudents(page, size, exchange);
+        return getDelegate().getAllStudents(page, size);
     }
 
 
-    public static final String PATH_GET_STUDENT_BY_ID = "/students/{id}";
+    String PATH_GET_STUDENT_BY_ID = "/students/{id}";
     /**
      * GET /students/{id} : Get a student by Id
      *
@@ -187,7 +176,7 @@ public interface StudentsApi {
                 @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject.class))
             }),
             @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject1.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject.class))
             })
         }
     )
@@ -196,16 +185,14 @@ public interface StudentsApi {
         value = StudentsApi.PATH_GET_STUDENT_BY_ID,
         produces = { "application/json" }
     )
-    
-    default Mono<ResponseEntity<GetStudentByIdResponse>> getStudentById(
-        @Parameter(name = "id", description = "Student Id", required = true, in = ParameterIn.PATH) @PathVariable("id") String id,
-        @Parameter(hidden = true) final ServerWebExchange exchange
+    default ResponseEntity<GetStudentByIdResponse> getStudentById(
+        @Parameter(name = "id", description = "Student Id", required = true, in = ParameterIn.PATH) @PathVariable("id") String id
     ) {
-        return getDelegate().getStudentById(id, exchange);
+        return getDelegate().getStudentById(id);
     }
 
 
-    public static final String PATH_UPDATE_STUDENT = "/students/{id}";
+    String PATH_UPDATE_STUDENT = "/students/{id}";
     /**
      * PUT /students/{id} : Update a student
      *
@@ -226,7 +213,7 @@ public interface StudentsApi {
                 @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject.class))
             }),
             @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject1.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = InlineObject.class))
             })
         }
     )
@@ -236,13 +223,11 @@ public interface StudentsApi {
         produces = { "application/json" },
         consumes = { "application/json" }
     )
-    
-    default Mono<ResponseEntity<UpdateStudentResponse>> updateStudent(
+    default ResponseEntity<UpdateStudentResponse> updateStudent(
         @Parameter(name = "id", description = "Student Id", required = true, in = ParameterIn.PATH) @PathVariable("id") String id,
-        @Parameter(name = "Student", description = "") @Valid @RequestBody(required = false) Mono<Student> student,
-        @Parameter(hidden = true) final ServerWebExchange exchange
+        @Parameter(name = "Student", description = "") @Valid @RequestBody(required = false) @Nullable Student student
     ) {
-        return getDelegate().updateStudent(id, student, exchange);
+        return getDelegate().updateStudent(id, student);
     }
 
 }
